# u_shaped_gimbal

./: README.md
scripts/: rotation_matrix_node.py
u_shaped_gimbal_control/: CMakeLists.txt  package.xml
u_shaped_gimbal_control/config/: controllers.yaml  gimbal_controller.yaml
u_shaped_gimbal_control/launch/: gazebo.launch  gimbal_control.launch
u_shaped_gimbal_control/rviz/: rviz.rviz
u_shaped_gimbal_control/scripts/: gimbal_controller.py  gimbal_current_smooth_speed.py  gimbal_current_smooth_time.py  gimbal_joint_smooth_control.py  gimbal_zero_start_smooth.py
u_shaped_gimbal_control/src/: gimbal_current_smooth_speed.cpp
u_shaped_gimbal_control/urdf/: gazebo_config.gazebo.xacro  u_shaped_gimbal_complete.xacro
u_shaped_gimbal_control/worlds/: empty.world  signboard.world
u_shaped_gimbal_description/: CMakeLists.txt  package.xml  urdf.rviz
u_shaped_gimbal_description/config/: joint_names_u_shaped_gimbal_description.yaml
u_shaped_gimbal_description/launch/: display.launch  gazebo.launch
u_shaped_gimbal_description/meshes/: base_link.STL  link_up.STL
u_shaped_gimbal_description/urdf/: u_shaped_gimbal.csv  u_shaped_gimbal.urdf  (+2 more)
v1/U-shaped gimbal/: CMakeLists.txt  package.xml
v1/U-shaped gimbal/launch/: display.launch  gazebo.launch
v1/U-shaped gimbal/meshes/: link_up.STL
v1/U-shaped gimbal/urdf/: U-shaped gimbal.csv  U-shaped gimbal.urdf
v2/u_shaped_gimbal/: CMakeLists.txt  package.xml
v2/u_shaped_gimbal/launch/: display.launch  gazebo.launch
v2/u_shaped_gimbal/meshes/: link_front.STL
v2/u_shaped_gimbal/urdf/: u_shaped_gimbal.urdf
(+7 files in other folders)
